fix: hyperlink references

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="p-5 row section-content middle-section" style="max-width: 100%;">
                     <h2>Some Things I've Made</h2>
                     <div class="carousel">
-                        <div class="item container-fluid">
+                        <a href="/revox.html" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5 carousel-description">
                                     <h3 class="row">ReVox</h3>
@@ -88,8 +88,8 @@
                                     <img src="img/intro.gif">
                                 </div>
                             </div>
-                        </div>
-                        <div class="item container-fluid">
+                        </a>
+                        <a href="" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5">
                                     <h3 class="row">Session: Drums</h3>
@@ -107,8 +107,8 @@
                                     <img src="img/drumspv.gif">
                                 </div>
                             </div>
-                        </div>
-                        <div class="item container-fluid">
+                        </a>
+                        <a href="https://onglez.itch.io/sideout" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5">
                                     <h3 class="row">Sideout</h3>
@@ -125,8 +125,8 @@
                                     <img src="img/sideoutpv.gif">
                                 </div>
                             </div>
-                        </div>
-                        <div class="item container-fluid">
+                        </a>
+                        <a href="https://github.com/andre-tm-hui/LearningTetris" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5">
                                     <h3 class="row">Tetris AI</h3>
@@ -144,14 +144,14 @@
                                     <img src="img/tetrispv.gif">
                                 </div>
                             </div>
-                        </div>
+                        </a>
                         <div class="carousel-button-container">
                             <div class="carousel-button" id="carouselPrevious"><i class="fas fa-angle-left"></i></div>
                             <div class="carousel-button" id="carouselNext"><i class="fas fa-angle-right"></i></div>
                         </div>
                     </div>
                     <ul class="dots list-inline" id="carousel-dots"></ul>
-                    <a class="button" href="" style="font-size: 20px;"><span>See more</span></a>
+                    <a class="button" href="/projects" style="font-size: 20px;"><span>See more</span></a>
                 </div>
             </section>
 
