fix: hyperlink to new tab if not local

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                         <ul class="intro-list">
                             <li>Durham CS graduate,</li>
                             <li>Aspiring software engineer,</li>
-                            <li>Developer at <a href="https://collaction.org">CollAction</a></li>
-                            <li>Creator of <a href="https://github.com/andre-tm-hui/ReVox">ReVox</a>,</li>
+                            <li>Developer at <a href="https://collaction.org" target="_blank" rel="noopener noreferrer">CollAction</a></li>
+                            <li>Creator of <a href="/revox">ReVox</a>,</li>
                         </ul>
                         <ul class="list-inline">
-                            <li class="link-icon list-inline-item"><a href="https://github.com/andre-tm-hui"><i class="fa-brands fa-github"></i></a></li>
-                            <li class="link-icon list-inline-item"><a href="https://linkedin.com/in/andre-tm-hui"><i class="fa-brands fa-linkedin"></i></a></li>
-                            <li class="link-button list-inline-item"><a href="files/resume.pdf">Resume</a></li>  
+                            <li class="link-icon list-inline-item"><a href="https://github.com/andre-tm-hui" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+                            <li class="link-icon list-inline-item"><a href="https://linkedin.com/in/andre-tm-hui" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a></li>
+                            <li class="link-button list-inline-item"><a href="files/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>  
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3" style="text-align: right; margin: auto;">
@@ -71,7 +71,7 @@
                 <div class="p-5 row section-content middle-section" style="max-width: 100%;">
                     <h2>Some Things I've Made</h2>
                     <div class="carousel">
-                        <a href="/revox.html" class="item container-fluid">
+                        <a href="/revox" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5 carousel-description">
                                     <h3 class="row">ReVox</h3>
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="" class="item container-fluid">
+                        <a href="" target="_blank" rel="noopener noreferrer" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5">
                                     <h3 class="row">Session: Drums</h3>
@@ -108,7 +108,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://onglez.itch.io/sideout" class="item container-fluid">
+                        <a href="https://onglez.itch.io/sideout" target="_blank" rel="noopener noreferrer" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5">
                                     <h3 class="row">Sideout</h3>
@@ -126,7 +126,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://github.com/andre-tm-hui/LearningTetris" class="item container-fluid">
+                        <a href="https://github.com/andre-tm-hui/LearningTetris" target="_blank" rel="noopener noreferrer" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5">
                                     <h3 class="row">Tetris AI</h3>
@@ -161,9 +161,9 @@
                         <div class="row flex-row-reverse">
                             <div class="about-description col-12 col-sm-7">
                                 <h2>About Me</h2>
-                                <p>I am an aspiring software engineer, having graduated from Durham University in Computer Science. Currently, I'm looking for work, whilst progressing with my passion project, <a href="">ReVox</a>, as well as contributing to the development of the <a href="https://collaction.org">CollAction</a> flutter app.</a></p>
+                                <p>I am an aspiring software engineer, having graduated from Durham University in Computer Science. Currently, I'm looking for work, whilst progressing with my passion project, <a href="/revox">ReVox</a>, as well as contributing to the development of the <a href="https://collaction.org" target="_blank" rel="noopener noreferrer">CollAction</a> flutter app.</a></p>
                                 <p>I'm a firm believer of using the right tool for the job, and I'm always keen to learn a new tech stack/library to solve a problem.</p>
-                                <p>If I'm not programming, I'm usually noodling on the guitar, <a href="">making</a> things, playing basketball or gaming with friends.</p>
+                                <p>If I'm not programming, I'm usually noodling on the guitar, <a href="/makes">making</a> things, playing basketball or gaming with friends.</p>
                             </div>
                             <div class="portrait col-12 col-sm-4">
                                 <img src="img/profile.jpg">
