--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
         <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
         <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
         <link href="css/portfolio.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/fd95051d04.js" crossorigin="anonymous"></script>
     </head>
@@ -36,14 +37,14 @@
                             <a class="nav-link" href="/projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/makes">Maker/Craft</a>
+                            <a class="nav-link" href="/makes">Makes</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="container-flud p-0 main-body">
+        <div class="container-fluid p-0 main-body">
             <section class="intro-section" id="intro">
                 <div class="p-3 p-sm-5 row section-content">
                     <div class="col-12 col-sm-6 col-md-5 offset-md-2" style="text-align: left; margin: auto;">
@@ -68,7 +69,7 @@
             </section>
 
             <section class="section" id="highlights">
-                <div class="p-5 row section-content middle-section" style="max-width: 100%;">
+                <div class="p-5 row section-content" style="max-width: 100%;">
                     <h2>Some Things I've Made</h2>
                     <div class="carousel">
                         <a href="/revox" class="item container-fluid">
@@ -89,7 +90,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="" target="_blank" rel="noopener noreferrer" class="item container-fluid">
+                        <a href="https://www.youtube.com/watch?v=RPWr4kSICfY" target="_blank" rel="noopener noreferrer" class="item container-fluid">
                             <div class="row" style="padding: 5%;">
                                 <div class="col-12 col-sm-5">
                                     <h3 class="row">Session: Drums</h3>
@@ -155,8 +156,8 @@
                 </div>
             </section>
 
-            <section class="section" id="about">
-                <div class="p-5 row section-content middle-section">
+            <section class="section" id="about" style="background-color: #101010;">
+                <div class="p-5 row section-content">
                     <div class="container-fluid">
                         <div class="row flex-row-reverse">
                             <div class="about-description col-12 col-sm-7">
@@ -206,7 +207,7 @@
                 </div>
             </section>
 
-            <section class="section" id="footer">
+            <section class="section" id="footer" style="background-color: #101010;">
                 <div class="footer row section-content">
                     <div class="container-fluid">
                         <div class="col-12">
