feat: populated all pages, cleaned up styling

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </nav>
 
-        <div class="container-fluid p-0 main-body">
+        <div class="container-fluid p-0">
             <section class="intro-section" id="intro">
                 <div class="p-3 p-sm-5 row section-content">
                     <div class="col-12 col-sm-6 col-md-5 offset-md-2" style="text-align: left; margin: auto;">
@@ -68,8 +68,8 @@
                 </div>
             </section>
 
-            <section class="section" id="highlights">
-                <div class="p-5 row section-content" style="max-width: 100%;">
+            <section class="section" id="highlights" style="padding-inline: 0%;">
+                <div class="row section-content" style="max-width: 100%;">
                     <h2>Some Things I've Made</h2>
                     <div class="carousel">
                         <a href="/revox" class="item container-fluid">
@@ -152,12 +152,12 @@
                         </div>
                     </div>
                     <ul class="dots list-inline" id="carousel-dots"></ul>
-                    <a class="button" href="/projects" style="font-size: 20px;"><span>See more</span></a>
+                    <button href="/projects" style="width: 7em;"><span>See More</span></button>
                 </div>
             </section>
 
             <section class="section" id="about" style="background-color: #101010;">
-                <div class="p-5 row section-content">
+                <div class="row section-content">
                     <div class="container-fluid">
                         <div class="row flex-row-reverse">
                             <div class="about-description col-12 col-sm-7">
@@ -175,7 +175,7 @@
             </section>
 
             <section class="section" id="contact">
-                <div class="p-5 row section-content">
+                <div class="row section-content">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="contact-description col-12 col-sm-5">
@@ -220,9 +220,6 @@
 
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
         <script src="js/portfolio.js"></script>
     </body>
 </html>
