--- a/makes.html
+++ b/makes.html
@@ -6,18 +6,142 @@
         <meta name="description" content="">
         <meta name="author" content="Andre T.M. Hui">
 
-        <title>ReVox - Soundboard and Voice Changer</title>
+        <title>Andre Hui - Makes</title>
 
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
         <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
         <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-        <link href="css/portfolio.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <link href="css/item-list.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/fd95051d04.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        Makes
+        <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top">
+            <div class="container-fluid navbar-container">
+                <a class="navbar-brand" href="./"><img class="nav-home" src="img/signature.png"  alt="Home"></a>
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa fa-bars navbar-toggler-custom-icon"></i>
+                </button>
+                <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                    <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/revox">ReVox</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/games">Games</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/projects">Projects</a>
+                        </li>
+                        <li class="nav-item nav-selected">
+                            <a class="nav-link" href="#">Makes</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+        <section class="section">
+            <div class="section-content">
+                <ul class="items container-fluid">
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
+                            <h3>Custom ??? Guitar</h3>
+                            <h4>TBD</h4>
+                            <p>
+                                My second try at building a guitar, this time from scratch. Saw a really nicely figured piece of maple while at Tokyu Hands, Japan, and decided I'd give it a go!<br><br>
+                                Still deciding on the design of the rest of the guitar.
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">Electric Guitar</li>
+                            </ul>
+                            <ul class="list-inline">
+                            </ul>
+                            <h6>Jan '23 -</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./img/placeholder.png">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
+                            <h3>Custom Thinline Telecaster</h3>
+                            <h4>Seaburst, P90s</h4>
+                            <p>
+                                My first try at building a guitar, helped by a pre-made kit. Lots of aesthetic imperfections, but all part of a learning process.
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">Electric Guitar</li>
+                            </ul>
+                            <ul class="list-inline">
+                            </ul>
+                            <h6>July '19, revisited Jan '23</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./img/placeholder.png">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
+                            <h3>Custom Sofle V2.1 RGB</h3>
+                            <h4>Ergo-Split Keyboard</h4>
+                            <p>
+                                I got interested in Mechanical Keyboards around June '21, and when I finally got a 3D Printer to play around with, I decided to try designing a custom sandwich-mount case for the Sofle V2.1, complete with underglow lighting.<br><br>
+                                It went well enough, so I ended up building another for my brother!
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">Fusion 360</li>
+                                <li class="list-inline-item">3D Printing</li>
+                                <li class="list-inline-item">Electronics</li>
+                                <li class="list-inline-item">CAD/CAM</li>
+                            </ul>
+                            <a href="https://www.thingiverse.com/thing:5407420" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-cubes"></i></a>
+                            <h6>Sept '21 - Dec '21</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./img/sofle.jpg">
+                        </div>
+                    </li>
+                    <li class="row item-container">
+                        <div class="col-12 col-sm-7 item-description">
+                            <h3>Quest 2 Headstrap</h3>
+                            <h4>Flip-Up, Halo</h4>
+                            <p>
+                                Whilst learning VR development, I grew tired of having to remove my headset completely every time I wanted to update code or change game configurations. <br><br>
+                                This led me to engineering a custom 3D-printable headstrap that conveniently flips up when I want to make changes at the desktop!
+                            </p>
+                            <ul class="list-inline tech-stack-list">
+                                <li class="list-inline-item">Fusion 360</li>
+                                <li class="list-inline-item">3D Printing</li>
+                                <li class="list-inline-item">Engineering</li>
+                                <li class="list-inline-item">CAD/CAM</li>
+                                <li class="list-inline-item">Ergonomics</li>
+                            </ul>
+                            <a href="https://www.thingiverse.com/thing:5407375" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-cubes"></i></a>
+                            <h6>Jan '22 - Apr '22</h6>
+                        </div>
+                        <div class="col-12 col-sm-5 item-pv">
+                            <img src="./img/queststrap.jpg">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            
+        </section>        
+
+        <section class="section" id="footer" style="background-color: #101010;">
+            <div class="footer row section-content">
+                <div class="container-fluid">
+                    <div class="col-12">
+                        <p>Designed & built by Andre Hui</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
