--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
         <script src="https://kit.fontawesome.com/fd95051d04.js" crossorigin="anonymous"></script>
     </head>
 
-    <body>
+    <body id="page-top">
         <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top">
             <div class="container-fluid navbar-container">
                 <a class="navbar-brand" href="./"><img class="nav-home" src="img/signature.png"  alt="Home"></a>
@@ -88,7 +88,7 @@
                             <h6>Jan '23</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/">
+                            <img src="./img/placeholder.png">
                         </div>
                     </li>
                     <li class="row item-container">
@@ -133,7 +133,7 @@
                             <h6>Oct '19 - Apr '20</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/tetrispv.gif">
+                            <img src="./img/placeholder.png">
                         </div>
                     </li>
                 </ul>
@@ -150,6 +150,9 @@
                 </div>
             </div>
         </section>
+
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     </body>
 
     
