--- a/games.html
+++ b/games.html
@@ -121,6 +121,9 @@
                 </div>
             </div>
         </section>
+
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     </body>
 
     
