--- a/revox.html
+++ b/revox.html
@@ -13,11 +13,15 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
         <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
         <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-        <link href="css/portfolio.css" rel="stylesheet">
+        <link href="css/revox.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/fd95051d04.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        Revox
+        Under Construction
+
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
