feat: better navbar interactions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body id="page-top">      
-        <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top" id="navbar">
             <div class="container-fluid navbar-container">
                 <a class="navbar-brand" href="#"><img class="nav-home" src="img/signature.png"  alt="Home"></a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
                         <ul class="list-inline">
                             <li class="link-icon list-inline-item"><a href="https://github.com/andre-tm-hui" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
                             <li class="link-icon list-inline-item"><a href="https://linkedin.com/in/andre-tm-hui" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a></li>
-                            <li class="link-button list-inline-item"><a href="files/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>  
+                            <li class="link-icon list-inline-item"><a href="files/resume.pdf" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-file"></i></a></li>  
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3" style="text-align: right; margin: auto;">
@@ -221,5 +221,6 @@
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
         <script src="js/portfolio.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
