--- a/makes.html
+++ b/makes.html
@@ -143,5 +143,6 @@
         </section>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
