--- a/games.html
+++ b/games.html
@@ -124,6 +124,7 @@
 
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="js/script.js"></script>
     </body>
 
     
