--- a/games.html
+++ b/games.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top" id="navbar">
             <div class="container-fluid navbar-container">
                 <a class="navbar-brand" href="./"><img class="nav-home" src="img/signature.png"  alt="Home"></a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
