--- a/revox.html
+++ b/revox.html
@@ -19,9 +19,146 @@
     </head>
 
     <body>
-        Under Construction
+        <nav class="navbar navbar-expand-sm navbar-dark bg-nav fixed-top" id="navbar">
+            <div class="container-fluid navbar-container">
+                <a class="navbar-brand" href="./"><img class="nav-home" src="img/signature.png"  alt="Home"></a>
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa fa-bars navbar-toggler-custom-icon"></i>
+                </button>
+                <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                    <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/andre-tm-hui/ReVox/wiki">Docs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Tutorials</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/andre-tm-hui/ReVox">GitHub</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container-fluid" style="padding:0%;">
+            <section class="section" id="top-download">
+                <div class="row section-content">
+                    <div class="col-12 col-sm-5 left-align">
+                        <h1 style="margin-bottom: -0.25em;">Get ReVox</h1>
+                        <h6 style="margin-block: 2em; font-weight: 500; color: #B0B0B0;">A Soundboard, Sampler and Voice Changer, free and open-source.</h6>
+                        <button id="download-button"><span><i class="fa-solid fa-download"></i> Download for Windows</span></button>
+                        <p style="font-size: 0.8em; color: #505050;">For Windows 10/11</p>
+                    </div>
+                    <div class="col-12 col-sm-7 right-align">
+                        <img src="img/revox/revox_top.gif">
+                    </div>
+                </div>
+            </section>
+
+            <section class="section" id="main-features">
+                <h2>Features</h2>
+                <div class="row section-content">
+                    <div class="col-12 container-fluid">
+                        <div class="row left-align feature-highlight">
+                            <div class="col-12 col-md-5">
+                                <h2>It's a Soundboard...</h2>
+                                <p>Import your favorite audio clips, customize how they sound, and play them through your microphone.</p>
+                            </div>
+                            <div class="col-12 col-md-7">
+                                <img src="img/revox/soundboard.png">
+                            </div>
+                        </div>
+                        <div class="row right-align feature-highlight">
+                            <div class="col-12 col-md-5">
+                                <h2>A Sampler...</h2>
+                                <p>Want to capture a sound on the fly for your soundboard? Hold any empty soundboard key to start recording whatever you're hearing/saying.</p>
+                            </div>
+                            <div class="col-12 col-md-7">
+                                <img src="img/placeholder.png">
+                            </div>
+                        </div>
+                        <div class="row left-align feature-highlight">
+                            <div class="col-12 col-md-5">
+                                <h2>A Voice Changer...</h2>
+                                <p>Get creative with your voice! Use built-in audio effects to change how you sound.</p>
+                            </div>
+                            <div class="col-12 col-md-7">
+                                <img src="img/revox/voicefx.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!--
+                Other features include:
+                    - Audio monitoring
+                    - Active FX tracking
+                    - Keyboard-specific hotkeys
+                    - Built for streamers
+                    - 
+            -->
+            <section class="section" id="other-features">
+                <div class="row section-content">
+                    <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
+                        <div class="feature-card-content">
+                            <img style="max-height:50%;" src="img/revox/slider.gif">
+                            <h5>Audio Monitoring</h5>
+                            <p>Hear your voice and soundboard, and make sure you sound good.</p>
+                        </div>
+                    </div>
+                    <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
+                        <div class="feature-card-content">
+                            <img style="max-height:50%;" src="img/placeholder.png">
+                            <h5>Track your FX</h5>
+                            <p>Never forget what effects are on your voice. Keep track using a subtle HUD.</p>
+                            <p style="font-size: 0.7em; color: #808080;">*Does not work with Exclusive Fullscreen applications.</p>
+                        </div>
+                    </div>
+                    <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
+                        <div class="feature-card-content">
+                            <img style="max-height:50%;" src="img/placeholder.png">
+                            <h5>Keyboard-Specific Keybinds</h5>
+                            <p>Got a spare keyboard? Use that for your hotkeys, and never accidentally trigger a sound/effect again.</p>
+                        </div>
+                    </div>
+                    <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
+                        <div class="feature-card-content">
+                            <img style="max-height:50%;" src="img/placeholder.png">
+                            <h5>Built for Streamers</h5>
+                            <p>Route your audio such that recording software doesn't record you twice.</p>
+                        </div>
+                    </div>
+                    <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
+                        <div class="feature-card-content">
+                            <img style="max-height:50%;" src="img/placeholder.png">
+                            <h5>Setup and Forget</h5>
+                            <p>ReVox is completely transparent - get it setup, launch it with Windows, and forget it's even there until you need it!</p>
+                        </div>
+                    </div>
+                    <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
+                        <div class="feature-card-content">
+                            <h6 style="margin-block: 60%; color: #505050;">More to come...</h6>
+                        </div>    
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <section class="section" id="footer" style="background-color: #101010;">
+            <div class="footer row section-content">
+                <div class="container-fluid">
+                    <div class="col-12">
+                        <p>Designed & built by Andre Hui</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="js/script.js"></script>
+        <script src="js/revox.js"></script>
     </body>
 </html>
