fix: logo button size fixed

--- a/revox.html
+++ b/revox.html
@@ -60,27 +60,19 @@
                 <h2>Features</h2>
                 <div class="row section-content">
                     <div class="col-12 container-fluid">
-                        <div class="row left-align feature-highlight">
+                        <div class="row right-align feature-highlight">
                             <div class="col-12 col-md-5">
-                                <h2>It's a Soundboard...</h2>
+                                <h2>Soundboard and Sampler</h2>
                                 <p>Import your favorite audio clips, customize how they sound, and play them through your microphone.</p>
+                                <p>Capture sounds on the fly, whether it be a sound you hear or make, and reuse it later.</p>
                             </div>
                             <div class="col-12 col-md-7">
                                 <img src="img/revox/soundboard.png">
                             </div>
                         </div>
-                        <div class="row right-align feature-highlight">
-                            <div class="col-12 col-md-5">
-                                <h2>A Sampler...</h2>
-                                <p>Want to capture a sound on the fly for your soundboard? Hold any empty soundboard key to start recording whatever you're hearing/saying.</p>
-                            </div>
-                            <div class="col-12 col-md-7">
-                                <img src="img/placeholder.png">
-                            </div>
-                        </div>
                         <div class="row left-align feature-highlight">
                             <div class="col-12 col-md-5">
-                                <h2>A Voice Changer...</h2>
+                                <h2>Voice Effects</h2>
                                 <p>Get creative with your voice! Use built-in audio effects to change how you sound.</p>
                             </div>
                             <div class="col-12 col-md-7">
