feat: added images to revox page, changed some styling

--- a/revox.html
+++ b/revox.html
@@ -57,14 +57,16 @@
             </section>
 
             <section class="section" id="main-features">
-                <h2>Features</h2>
+                <h2 style="color:#FFFFFF">Features</h2>
                 <div class="row section-content">
                     <div class="col-12 container-fluid">
                         <div class="row right-align feature-highlight">
                             <div class="col-12 col-md-5">
-                                <h2>Soundboard and Sampler</h2>
-                                <p>Import your favorite audio clips, customize how they sound, and play them through your microphone.</p>
-                                <p>Capture sounds on the fly, whether it be a sound you hear or make, and reuse it later.</p>
+                                <div class="feature-description" style="margin-left: -25%;">
+                                    <h3>Soundboard and Sampler</h3>
+                                    <p>Import your favorite audio clips, customize how they sound, and play them through your microphone.</p>
+                                    <p>Capture sounds on the fly, whether it be a sound you hear or make, and reuse it later.</p>
+                                </div>
                             </div>
                             <div class="col-12 col-md-7">
                                 <img src="img/revox/soundboard.png">
@@ -72,8 +74,10 @@
                         </div>
                         <div class="row left-align feature-highlight">
                             <div class="col-12 col-md-5">
-                                <h2>Voice Effects</h2>
-                                <p>Get creative with your voice! Use built-in audio effects to change how you sound.</p>
+                                <div class="feature-description" style="margin-right: -25%;">
+                                    <h3>Voice Effects</h3>
+                                    <p>Get creative with your voice! Use built-in audio effects to change how you sound.</p>
+                                </div>
                             </div>
                             <div class="col-12 col-md-7">
                                 <img src="img/revox/voicefx.png">
@@ -95,14 +99,18 @@
                 <div class="row section-content">
                     <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
                         <div class="feature-card-content">
-                            <img style="max-height:50%;" src="img/revox/slider.gif">
+                            <div class="feat-img-container">
+                                <img src="img/revox/slider.gif">
+                            </div>
                             <h5>Audio Monitoring</h5>
                             <p>Hear your voice and soundboard, and make sure you sound good.</p>
                         </div>
                     </div>
                     <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
                         <div class="feature-card-content">
-                            <img style="max-height:50%;" src="img/placeholder.png">
+                            <div class="feat-img-container">
+                                <img src="img/revox/fxhud-final.png">
+                            </div>
                             <h5>Track your FX</h5>
                             <p>Never forget what effects are on your voice. Keep track using a subtle HUD.</p>
                             <p style="font-size: 0.7em; color: #808080;">*Does not work with Exclusive Fullscreen applications.</p>
@@ -110,21 +118,27 @@
                     </div>
                     <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
                         <div class="feature-card-content">
-                            <img style="max-height:50%;" src="img/placeholder.png">
+                            <div class="feat-img-container">
+                                <img src="img/revox/keyboard-specific.png">
+                            </div>
                             <h5>Keyboard-Specific Keybinds</h5>
                             <p>Got a spare keyboard? Use that for your hotkeys, and never accidentally trigger a sound/effect again.</p>
                         </div>
                     </div>
                     <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
                         <div class="feature-card-content">
-                            <img style="max-height:50%;" src="img/placeholder.png">
+                            <div class="feat-img-container">
+                                <img src="img/revox/stream.png">
+                            </div>
                             <h5>Built for Streamers</h5>
                             <p>Route your audio such that recording software doesn't record you twice.</p>
                         </div>
                     </div>
                     <div class="col-8 col-sm-6 col-md-4 offset-2 offset-sm-0 feature-card">
-                        <div class="feature-card-content">
-                            <img style="max-height:50%;" src="img/placeholder.png">
+                        <div class="feature-card-content container-fluid">
+                            <div class="feat-img-container">
+                                <img src="img/revox/taskbar.png">
+                            </div>
                             <h5>Setup and Forget</h5>
                             <p>ReVox is completely transparent - get it setup, launch it with Windows, and forget it's even there until you need it!</p>
                         </div>
