--- a/makes.html
+++ b/makes.html
@@ -44,7 +44,7 @@
             </div>
         </nav>
         
-        <section class="section">
+        <section class="section" style="padding-block: 0;">
             <div class="section-content">
                 <ul class="items container-fluid">
                     <li class="row item-container">
