feat: added images

--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
                             <h6>Jan '23</h6>
                         </div>
                         <div class="col-12 col-sm-5 item-pv">
-                            <img src="./img/placeholder.png">
+                            <img src="./img/webportfolio.gif">
                         </div>
                     </li>
                     <li class="row item-container">
